@@ -1,6 +1,12 @@
 # ChangeLog for sci-geosciences/qlandkartegt-garmindev
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/qlandkartegt-garmindev/ChangeLog,v 1.1 2009/03/10 17:37:37 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/qlandkartegt-garmindev/ChangeLog,v 1.2 2009/04/15 21:04:57 hanno Exp $
+
+*qlandkartegt-garmindev-0.1.1 (15 Apr 2009)
+
+  15 Apr 2009; Hanno Boeck <hanno@gentoo.org>
+  +qlandkartegt-garmindev-0.1.1.ebuild:
+  Version bump.
 
 *qlandkartegt-garmindev-0.1.0 (10 Mar 2009)
 
